Removed borders between sections

--- a/html/courses.html
+++ b/html/courses.html
@@ -15,14 +15,14 @@
     <body>
     <h1>Courses</h1>
     <div class="course-list-sidebar">
-        <h1>in English</h1><br>
+        <h1 id="en">in English</h1><br>
         <a href="/">Arabic</a><br>
         <a href="russian.html" view="iframe">Russian</a><br>
         <a href="computer.html" view="iframe">Information Technology</a><br>
         <a href="psychology.html" view="iframe">Psychology</a><br>
         <a href="biology.html" view="iframe">Biology</a><br>
         <br>
-        <h2>in Bahasa Indonesia</h2>
+        <h2 id="id">in Bahasa Indonesia</h2>
         <a href="/">Bahasa Inggris</a><br>
         <a href="/">Matematika</a><br>
         <a href="/">IPA</a><br>
