--- a/html/oops.html
+++ b/html/oops.html
@@ -7,11 +7,11 @@
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
         <link href="https://fonts.googleapis.com/css2?family=Ubuntu:ital,wght@0,300;0,400;0,500;0,700;1,300;1,400;1,500;1,700&display=swap" rel="stylesheet">
         <link href="https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300..800;1,300..800&family=Ubuntu:ital,wght@0,300;0,400;0,500;0,700;1,300;1,400;1,500;1,700&display=swap" rel="stylesheet">
-        <title>Sent!</title>
+        <title>Content Unavailable</title>
     </head>
     <body>
-        <h1>Sent!</h1>
-        <p>Thank you for sharing with us. We'll get back to you in 3-5 days.</p>
+        <h1>Oops!</h1>
+        <p>We haven't made this page yet. Thank you for your patience!</p>
         <button type="button">
             <a href="/index.html">Go Back to Home
             </a>
