Fixed links and added responsiveness to grid

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
       content="Free Courses, Psychology, English, Arabic, Russian, science articles, fun facts, activities, freecix"
     />
     <meta name="author" content="Free Courses Index team" />
-    <title>Freecix - the Free Courses Index</title>
+    <title>Freecix - Free Courses Index</title>
 
     <!-- Bootstrap CSS -->
     <link
@@ -36,7 +36,7 @@
     <link href="https://raw.githubusercontent.com/moordee/freecix/refs/heads/main/seablue.jpg" rel="preload" as="image" type="image/jpg">
     <link href="https://raw.githubusercontent.com/moordee/freecix/refs/heads/main/fishclouds.jpg" rel="preload" as="image" type="image/jpg" />
     <link href="https://raw.githubusercontent.com/moordee/freecix/refs/heads/main/purplewithcorn.jpg" rel="preload" as="image" type="image/jpg" />
-    <link href="/css/custom.css" rel="stylesheet" />
+    <link href="css/custom.css" rel="stylesheet" />
     <style>
       #home {
         background-image: url("https://raw.githubusercontent.com/moordee/freecix/refs/heads/main/seablue.jpg");
@@ -103,7 +103,7 @@
                 Discover thousands of free educational courses across various
                 subjects and skill levels.
               </p>
-              <a href="/html/courses.html" class="btn btn-secondary"
+              <a href="html/courses.html" class="btn btn-secondary"
                 >Explore Courses</a
               >
             </div>
@@ -120,7 +120,7 @@
                 Read insightful articles and educational content to enhance your
                 learning journey.
               </p>
-              <a href="/html/articles-main.html" class="btn btn-primary"
+              <a href="html/articles-main.html" class="btn btn-primary"
                 >Read Articles</a
               >
             </div>
@@ -181,7 +181,7 @@
                     ></textarea>
                   </div>
                   <button type="submit" class="btn btn-primary w-100" id="submitContributor">
-                    <a href="/html/sent.html">Send</a>
+                    <a href="html/sent.html">Send</a>
                   </button>
                 </form>
               </div>
@@ -331,8 +331,8 @@
                       placeholder="Tell us your thoughts..."
                     ></textarea>
                   </div>
-                  <button type="submit" class="btn btn-primary w-100" id="submitFeedback" href="/html/sent.html">
-                    Send Feedback
+                  <button type="submit" class="btn btn-primary w-100" id="submitFeedback">
+                    <a href="html/sent.html">Send Feedback</a> 
                   </button>
                 </form>
               </div>
@@ -356,10 +356,10 @@
         </p>
         <p class="mb-4 text-center"><strong>Take action today:</strong></p>
         <ul class="text-center">
-          <li><button class="btn btn-tertiary" href="/html/oops.html">Share with Friends</button></li><br />
-          <li><button class="btn btn-tertiary" href="/index.html#contributor-section">Become a Contributor</button></li><br />
-          <li><button class="btn btn-tertiary" href="/index.html#feedback-section">Send a Feedback</button></li><br />
-          <li><button class="btn btn-tertiary" href="/html/oops.html">Donate</button></li>
+          <li><a class="btn btn-tertiary" href="html/oops.html">Share with Friends</a></li><br />
+          <li><a class="btn btn-tertiary" href="index.html#contributor-section">Become a Contributor</a></li><br />
+          <li><a class="btn btn-tertiary" href="index.html#feedback-section">Send a Feedback</a></li><br />
+          <li><a class="btn btn-tertiary" href="html/oops.html">Donate</a></li>
         </ul>
         <p class="mt-4">
           <small
@@ -375,46 +375,46 @@
     <div
       class="row justify-content-center text-white bg-primary-dark justify-content-center mt-0 my-0 p-3"
     >
-      <div class="col-2 col-sm-auto">
+      <div class="col-2 col-sm-2">
         <ul id="l1" class="text-white">
           <h5>Menu</h5>
-          <li><a href="/index.html#home">Home</a></li>
-          <li><a href="/html/articles-main.html">Articles</a></li>
-          <li><a href="/index.html#contributor-section">Contribute</a></li>
-          <li><a href="/index.html#updates-section">Updates</a></li>
+          <li><a href="index.html#home">Home</a></li>
+          <li><a href="html/articles-main.html">Articles</a></li>
+          <li><a href="index.html#contributor-section">Contribute</a></li>
+          <li><a href="index.html#updates-section">Updates</a></li>
         </ul>
       </div>
-      <div class="col-2 col-sm-auto">
+      <div class="col-2 col-sm-2">
         <ul class="text-white">
           <li><h5>Courses</h5></li>
-          <li><a href="/html/courses.html#en">in English</a></li>
-          <li><a href="/html/courses.html#id">in Bahasa Indonesia</a></li>
-          <li><a href="/html/courses.html">Mata Pelajaran</a></li>
+          <li><a href="html/courses.html#en">in English</a></li>
+          <li><a href="html/courses.html#id">in Bahasa Indonesia</a></li>
+          <li><a href="html/courses.html">Mata Pelajaran</a></li>
           <li>
-            <a href="/index.html#contributor-section">Submit Course in Your Language</a>
+            <a href="index.html#contributor-section">Submit Course in Your Language</a>
           </li>
         </ul>
       </div>
-      <div class="col-3 col-sm-auto">
+      <div class="col-3 col-sm-3">
         <ul class="text-white">
           <li><h5>Support Us</h5></li>
-          <li><a href="/index.html#sharing">Donate</a></li>
+          <li><a href="index.html#sharing">Donate</a></li>
           <li><a href="index.html#sharing">Share This Site with Friends</a></li>
-          <li><a href="/index.html#contributor-section">Become a Contributor</a></li>
-          <li><a href="/index.html#feedback-section">Share your Feedback</a></li>
+          <li><a href="index.html#contributor-section">Become a Contributor</a></li>
+          <li><a href="index.html#feedback-section">Share your Feedback</a></li>
         </ul>
       </div>
-      <div class="col-3 col-sm-auto">
+      <div class="col-3 col-sm-3">
         <ul>
           <li><h5>For Sponsors</h5></li>
-          <li><a href="/html/oops.html">Advertise in This Site</a></li>
-          <li><a href="/html/oops.html">Start a Collaboration</a></li>
+          <li><a href="html/oops.html">Advertise in This Site</a></li>
+          <li><a href="html/oops.html">Start a Collaboration</a></li>
         </ul>
       </div>
-      <div class="col-2 col-sm-auto">
+      <div class="col-2 col-sm-2">
         <ul>
           <li></li><h5>Contact Us</h5></li>
-          <li><a href="/html/oops.html">Email</a></li>
+          <li><a href="html/oops.html">Email</a></li>
         </ul>
       </div>
       <p class="text-center mt-3">
