Fixing grid responsiveness #2

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     />
     <meta
       name="keywords"
-      content="Free Courses, Psychology, English, Arabic, Russian, science articles, fun facts, activities, freecix"
+      content="Free Courses, Psychology, English, Arabic, Russian, science articles, fun facts, activities, freecix, Free Courses, Psychology, English, Arabic, Russian, science articles, fun facts, activities, freecix"
     />
     <meta name="author" content="Free Courses Index team" />
     <title>Freecix - Free Courses Index</title>
@@ -375,7 +375,7 @@
     <div
       class="row justify-content-center text-white bg-primary-dark justify-content-center mt-0 my-0 p-3"
     >
-      <div class="col-2 col-sm-2">
+      <div class="col-sm-2">
         <ul id="l1" class="text-white">
           <h5>Menu</h5>
           <li><a href="index.html#home">Home</a></li>
@@ -384,7 +384,7 @@
           <li><a href="index.html#updates-section">Updates</a></li>
         </ul>
       </div>
-      <div class="col-2 col-sm-2">
+      <div class="col-sm-2">
         <ul class="text-white">
           <li><h5>Courses</h5></li>
           <li><a href="html/courses.html#en">in English</a></li>
@@ -395,7 +395,7 @@
           </li>
         </ul>
       </div>
-      <div class="col-3 col-sm-3">
+      <div class="col-sm-3">
         <ul class="text-white">
           <li><h5>Support Us</h5></li>
           <li><a href="index.html#sharing">Donate</a></li>
@@ -404,14 +404,14 @@
           <li><a href="index.html#feedback-section">Share your Feedback</a></li>
         </ul>
       </div>
-      <div class="col-3 col-sm-3">
+      <div class="col-sm-3">
         <ul>
           <li><h5>For Sponsors</h5></li>
           <li><a href="html/oops.html">Advertise in This Site</a></li>
           <li><a href="html/oops.html">Start a Collaboration</a></li>
         </ul>
       </div>
-      <div class="col-2 col-sm-2">
+      <div class="col-sm-2">
         <ul>
           <li></li><h5>Contact Us</h5></li>
           <li><a href="html/oops.html">Email</a></li>
